--- a/pages/home.html
+++ b/pages/home.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="signin.html">Sign In</a>
                 </li>
                 <li>
-                <a class="nav-item nav-link" href="#" id="logout">Log Out</a>
+                <a class="nav-item nav-link" href="#" id="logout" onclick="logout()">Log Out</a>
                 </li>
             </ul>
         </div>
@@ -48,12 +48,17 @@
                         <h3>Name: <span id="name"></span></h3>
                     </div>
                 </div>
+               <div class="row">
+                   <div class="col-md-8">
+                       <div id='acceptors'></div>
+                   </div>
+               </div>
             </div>
         </div>
     </div>
 </body>
 
-<script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
+<!-- <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script> -->
 <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -63,5 +68,6 @@
     crossorigin="anonymous"></script>
 <script src="../js/app.js"></script>
 <script src="../js/auth.js"></script>
+<script src="../js/home.js"> </script>
 
 </html>
