--- a/pages/signin.html
+++ b/pages/signin.html
@@ -24,7 +24,7 @@
                 <a class="nav-item nav-link" href="home.html">Home </a>
                 <a class="nav-item nav-link active" href="signin.html" id="signin">Sign In <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="signup.html">Sign Up</a>
-                <a class="nav-item nav-link" href="#" id="logout" onclick="logOut()">Log Out</a>
+                <a class="nav-item nav-link" href="#" id="logout">Log Out</a>
             </div>
         </div>
     </nav>
@@ -68,7 +68,7 @@
     crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-<!-- <script src="../js/app.js"></script> -->
+<script src="../js/app.js"></script>
 <script src="../js/signin.js"></script>
 <script src="../js/auth.js"></script>
 
