--- a/pages/signup.html
+++ b/pages/signup.html
@@ -25,7 +25,7 @@
                 <a class="nav-item nav-link" href="home.html">Home </a>
                 <a class="nav-item nav-link" href="signin.html" id="signin">Sign In</a>
                 <a class="nav-item nav-link active" href="signup.html">Sign Up <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#" id="logout" onclick="logOut()">Log Out</a>
+                <a class="nav-item nav-link" href="#" id="logout">Log Out</a>
             </div>
         </div>
     </nav>
