data render complete of donor acceptor

--- a/index.html
+++ b/index.html
@@ -12,30 +12,58 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="bg-img">
+<body class="">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">Blood Bank</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="pages/home.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="pages/signin.html">Sign In</a>
-            <a class="nav-item nav-link" href="pages/signup.html">Sign Up</a>
-          </div>
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="pages/home.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="pages/signin.html">Sign In</a>
+                <a class="nav-item nav-link" href="pages/signup.html">Sign Up</a>
+            </div>
         </div>
-      </nav>
+    </nav>
 
-<div class="container-fluid">
-    <div class="container">
-        <div class="main-text text-center">
-            <h1>Blood Bank</h1>
-            <p>Help others by donating life</p>
+    <div class="container-fluid bg-img">
+        <div class="container">
+            <div class="main-text text-center">
+                <h1>Blood Bank</h1>
+                <p>Help others by donating life</p>
+            </div>
         </div>
     </div>
-</div>
+    <div class="container-fluid type">
+        <div class="container">
+            <div class="text text-center">
+                <h1>Understanding Your Blood Type</h1>
+                <h3>Not all blood is alike. There are eight common blood types and many rare ones.</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>Blood types are determined by the presence or absence of certain antigens – substances that can
+                        trigger an immune response if they are foreign to the body. Since some antigens can trigger a
+                        patient's immune system to attack the transfused blood, safe blood transfusions depend on
+                        careful blood typing and cross-matching.</p>
+                    <p>There are four major blood groups determined by the presence or absence of two antigens – A and
+                        B – on the surface of red blood cells. In addition to the A and B antigens, there is a protein
+                        called the Rh factor, which can be either present (+) or absent (–), creating the 8 most common
+                        blood types (A+, A-, B+, B-, O+, O-, AB+, AB-).</p>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-fluid img" src="assets/img/images.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 <!-- <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
