index changed and functions

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid type-info">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 type-info-text">
                     <p>Blood types are determined by the presence or absence of certain antigens – substances that can
                         trigger an immune response if they are foreign to the body. Since some antigens can trigger a
                         patient's immune system to attack the transfused blood, safe blood transfusions depend on
@@ -59,7 +59,7 @@
                         blood types (A+, A-, B+, B-, O+, O-, AB+, AB-).</p>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-fluid img" src="assets/img/images.jpg" alt="">
+                    <img class="img-fluid img" src="assets/img/bloodtypes.jpg" alt="">
                 </div>
             </div>
         </div>
