--- a/pages/signup.html
+++ b/pages/signup.html
@@ -119,8 +119,8 @@
                         </div>
                         <div class="col-10">
                             <select name="action" id="action" class="form-control">
-                                <option value="donor">Donor</option>
-                                <option value="accepter">Accepter</option>
+                                <option value="Donor">Donor</option>
+                                <option value="Accepter">Accepter</option>
                             </select>
                         </div>
                     </div>
