--- a/pages/home.html
+++ b/pages/home.html
@@ -56,6 +56,21 @@
             </div>
         </div>
 
+        <div class="container">
+            <div class="text">
+                <div class="row">
+                    <div class="col-12">
+                        <!-- <h3 class="text-center">Welcome <span id="name"></span></h3> -->
+                    </div>
+                </div>
+               <div class="row">
+                   <div class="col-md-8">
+                       <div id='donors'></div>
+                   </div>
+               </div>
+            </div>
+        </div>
+
         <!-- modal -->
         <div class="modal fade" id="userinfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
